[gd_scene load_steps=4 format=2]

[ext_resource path="res://HeroShop.gd" type="Script" id=1]
[ext_resource path="res://PlayerBoard.gd" type="Script" id=2]
[ext_resource path="res://Shop.gd" type="Script" id=3]

[node name="Shop" type="VBoxContainer"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroShopPanel" type="VSplitContainer" parent="."]
margin_right = 147.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="HeroShopPanel"]
margin_right = 147.0
margin_bottom = 14.0
text = "This the hero shop !"

[node name="HeroShop" type="HBoxContainer" parent="HeroShopPanel"]
margin_top = 26.0
margin_right = 147.0
margin_bottom = 26.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 30.0
margin_right = 147.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 10 )

[node name="PlayerBoardPanel" type="VSplitContainer" parent="."]
margin_top = 44.0
margin_right = 147.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="PlayerBoardPanel"]
margin_right = 147.0
margin_bottom = 14.0
text = "This the playerBoard !!!"

[node name="PlayerBoard" type="HBoxContainer" parent="PlayerBoardPanel"]
margin_top = 26.0
margin_right = 147.0
margin_bottom = 26.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 74.0
margin_right = 147.0
margin_bottom = 84.0
rect_min_size = Vector2( 10, 10 )

[node name="Log" type="Label" parent="."]
margin_top = 88.0
margin_right = 147.0
margin_bottom = 102.0
